syntax = "proto3";

package order;

option go_package = "/api";

service OrderService {
  rpc GetOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string id = 1;
}

message OrderResponse {
  string id = 1;
  string description = 2;
}
